--- a/package.json
+++ b/package.json
@@ -53,10 +53,12 @@
     "@vue/eslint-config-prettier": "^10.1.0",
     "@vue/eslint-config-typescript": "^14.3.0",
     "@vue/tsconfig": "^0.7.0",
+    "add": "^2.0.6",
     "eslint": "^9.18.0",
     "eslint-plugin-vue": "^9.32.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
+    "or": "^0.2.0",
     "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "sass-embedded": "^1.83.4",
@@ -64,6 +66,7 @@
     "typescript": "~5.7.3",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0",
-    "vue-tsc": "^2.2.0"
+    "vue-tsc": "^2.2.0",
+    "yarn": "^1.22.22"
   }
 }
